[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Chunk/ChunkHandlerNew.gd" type="Script" id=1]
[ext_resource path="res://Entities/Chunk/ChunkNew.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="ChunkHandlerNew" type="Node2D"]
script = ExtResource( 1 )

[node name="Chunks" type="Node2D" parent="."]

[node name="ChunkNew" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, 16 )
chunk_position = Vector2( 1, -2 )

[node name="ChunkNew2" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, 16 )
chunk_position = Vector2( 0, -2 )

[node name="ChunkNew3" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, 16 )
chunk_position = Vector2( -1, -2 )

[node name="ChunkNew4" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, 16 )
chunk_position = Vector2( 2, -2 )

[node name="ChunkNew5" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, 16 )
chunk_position = Vector2( 3, -2 )

[node name="ChunkNew23" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, 16 )
chunk_position = Vector2( 4, -2 )

[node name="ChunkNew6" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, 16 )
chunk_position = Vector2( -2, -2 )

[node name="ChunkNew11" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, 16 )
chunk_position = Vector2( -3, -2 )

[node name="ChunkNew17" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, 16 )
chunk_position = Vector2( -4, -2 )

[node name="ChunkNew46" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, -112 )
chunk_position = Vector2( 1, -3 )

[node name="ChunkNew47" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, -112 )
chunk_position = Vector2( 0, -3 )

[node name="ChunkNew48" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, -112 )
chunk_position = Vector2( -1, -3 )

[node name="ChunkNew49" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, -112 )
chunk_position = Vector2( 2, -3 )

[node name="ChunkNew50" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, -112 )
chunk_position = Vector2( 3, -3 )

[node name="ChunkNew51" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, -112 )
chunk_position = Vector2( 4, -3 )

[node name="ChunkNew52" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, -112 )
chunk_position = Vector2( -2, -3 )

[node name="ChunkNew53" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, -112 )
chunk_position = Vector2( -3, -3 )

[node name="ChunkNew54" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, -112 )
chunk_position = Vector2( -4, -3 )

[node name="ChunkNew7" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, 144 )
chunk_position = Vector2( 1, -1 )

[node name="ChunkNew8" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, 144 )
chunk_position = Vector2( 0, -1 )

[node name="ChunkNew9" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, 144 )
chunk_position = Vector2( -1, -1 )

[node name="ChunkNew10" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, 144 )
chunk_position = Vector2( 2, -1 )

[node name="ChunkNew27" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, 144 )
chunk_position = Vector2( 3, -1 )

[node name="ChunkNew30" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, 272 )
chunk_position = Vector2( 3, 0 )

[node name="ChunkNew31" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, 400 )
chunk_position = Vector2( 3, 1 )

[node name="ChunkNew28" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, 144 )
chunk_position = Vector2( 4, -1 )

[node name="ChunkNew29" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, 272 )
chunk_position = Vector2( 4, 0 )

[node name="ChunkNew32" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, 400 )
chunk_position = Vector2( 4, 1 )

[node name="ChunkNew12" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, 144 )
chunk_position = Vector2( -2, -1 )

[node name="ChunkNew25" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, 144 )
chunk_position = Vector2( -3, -1 )

[node name="ChunkNew33" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, 272 )
chunk_position = Vector2( -3, 0 )

[node name="ChunkNew34" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, 400 )
chunk_position = Vector2( -3, 1 )

[node name="ChunkNew26" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, 144 )
chunk_position = Vector2( -4, -1 )

[node name="ChunkNew35" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, 272 )
chunk_position = Vector2( -4, 0 )

[node name="ChunkNew36" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, 400 )
chunk_position = Vector2( -4, 1 )

[node name="ChunkNew13" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, 272 )
chunk_position = Vector2( 1, 0 )

[node name="ChunkNew14" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, 272 )

[node name="ChunkNew15" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, 272 )
chunk_position = Vector2( -1, 0 )

[node name="ChunkNew16" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, 272 )
chunk_position = Vector2( 2, 0 )

[node name="ChunkNew18" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, 272 )
chunk_position = Vector2( -2, 0 )

[node name="ChunkNew19" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, 400 )
chunk_position = Vector2( 1, 1 )

[node name="ChunkNew20" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, 400 )
chunk_position = Vector2( 0, 1 )

[node name="ChunkNew21" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, 400 )
chunk_position = Vector2( -1, 1 )

[node name="ChunkNew22" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, 400 )
chunk_position = Vector2( 2, 1 )

[node name="ChunkNew24" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, 400 )
chunk_position = Vector2( -2, 1 )

[node name="ChunkNew37" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 384, 528 )
chunk_position = Vector2( 3, 2 )

[node name="ChunkNew38" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 512, 528 )
chunk_position = Vector2( 4, 2 )

[node name="ChunkNew39" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -384, 528 )
chunk_position = Vector2( -3, 2 )

[node name="ChunkNew40" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -512, 528 )
chunk_position = Vector2( -4, 2 )

[node name="ChunkNew41" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 128, 528 )
chunk_position = Vector2( 1, 2 )

[node name="ChunkNew42" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 0, 528 )
chunk_position = Vector2( 0, 2 )

[node name="ChunkNew43" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -128, 528 )
chunk_position = Vector2( -1, 2 )

[node name="ChunkNew44" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( 256, 528 )
chunk_position = Vector2( 2, 2 )

[node name="ChunkNew45" parent="Chunks" instance=ExtResource( 2 )]
position = Vector2( -256, 528 )
chunk_position = Vector2( -2, 2 )

[node name="ChunkBorder" type="Sprite" parent="."]

[node name="icon" type="Sprite" parent="ChunkBorder"]
position = Vector2( -72, 192 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 3 )

[node name="icon2" type="Sprite" parent="ChunkBorder"]
position = Vector2( 72, 192 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 3 )

[node name="icon3" type="Sprite" parent="ChunkBorder"]
position = Vector2( -9.53674e-07, 264 )
rotation = 1.5708
scale = Vector2( 0.25, 2 )
texture = ExtResource( 3 )

[node name="icon4" type="Sprite" parent="ChunkBorder"]
position = Vector2( 0, 120 )
rotation = 1.5708
scale = Vector2( 0.25, 2 )
texture = ExtResource( 3 )
